--- a/src/scss/global/_form-elements.scss
+++ b/src/scss/global/_form-elements.scss
@@ -6,21 +6,25 @@
   box-shadow: 
     0 0 0 1px rgba(255, 255, 255, 0.1),
     inset 0 1px 3px rgba(0, 0, 0, 0.7);
+  @content; // Allow for customization
 }
 
 @mixin flex-center {
   display: flex;
   align-items: center;
+  @content; // Allow for customization
 }
 
 @mixin flex-row {
-  @include flex-center;
+  @include flex-center {
+    // Nested content will be passed through
+  }
   flex-direction: row;
+  @content; // Allow for customization
 }
 
 @mixin input-base {
   @include mixins.grid-compliant-text-input;
-  // @include box-shadow-base;
   appearance: none;
   -webkit-appearance: none;
   
@@ -32,6 +36,8 @@
   // &:hover {
   //   // @include box-shadow-hover;
   // }
+  
+  @content; // Allow for customization
 }
 
 // Block
@@ -256,7 +262,6 @@
 
   &__number-input-wrapper {
     @include mixins.grid-compliant-number-input-wrapper;
-    width: 100%;
   }
 
   &__select {
