--- a/src/scss/global/_form-elements.scss
+++ b/src/scss/global/_form-elements.scss
@@ -122,108 +122,102 @@
     padding: 0rem;
     color: colors.$c-black;
     background-color: colors.$form-content-bg;
+  }
 
+  &__effects-title {
+    @extend .protest-revolution-regular;
+    text-align: justify;
+    font-size: 0.8rem;
+    padding: 0.01rem 0 0.01rem 0;
+    padding-top: 0.2rem;
+    padding-bottom: 0.2rem;
+    margin-bottom: 0.1875rem;
+    background-color: colors.$effect;
+    color: colors.$universal-white;
+  }
 
-    &--title {
-        @extend .protest-revolution-regular;
-        text-align: justify;
-        font-size: 0.8rem;
-        padding: 0.01rem;
-        padding-top: 0.2rem;
-        padding-bottom: 0.2rem;
-        margin-bottom: 0.1875rem;
-        background-color: colors.$effect;
-        color: colors.$universal-white;
-    }
+  &__effects-name {
+    font-weight: bolder;
+    color: colors.$c-black;
+    font-size: 0.75rem;
+  }
 
-    &--name {
-        font-weight: bolder;
-        color: colors.$c-black;
-        font-size: 0.75rem;
-    }
+  &__effects-row {
+    padding-left: 20px;
+    display: grid;
+    grid-column: span 3 / span 3;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+    width: 50%;
+  }
 
-    &--row {
-        padding-left: 20px;
-        display: grid;
-        grid-column: span 3 / span 3;
-        grid-template-columns: repeat(3, minmax(0, 1fr));
-        width: 50%;
+  &__effects-row-cell {
+    padding-left: 3px;
+    padding-right: 3px;
+    border-bottom: 1px dashed colors.$c-tan;
+  }
 
-        &--cell {
-            padding-left: 3px;
-            padding-right: 3px;
-            border-bottom: 1px dashed colors.$c-tan;
+  &__effects-row-cell--first,
+  &__effects-row-cell--last {
+    font-weight: bold;
+  }
 
-            &--first,
-            &--last {
-                font-weight: bold;
-            }
+  &__effects-row-cell--last {
+    border-left: 1px dashed colors.$c-tan;
+    padding-left: 15px;
+    white-space: nowrap;
+  }
 
-            &--last {
-                border-left: 1px dashed colors.$c-tan;
-                padding-left: 15px;
-                white-space: nowrap;
-            }
-
-            &--middle {
-                font-style: italic;
-            }
-        }
-    }
-}
+  &__effects-row-cell--middle {
+    font-style: italic;
+  }
 
   &__group {
     margin: 1rem 0;
     padding: 0.25rem 0.5rem 0.75rem 0.5rem;
-    @include flex-row;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     gap: 1rem;
     flex: 1;
-
-    &:first-child {
-      padding-top: 0.5rem;
-    }
-    
-    label {
-      @include mixins.form-label-base;
-    }
   }
 
-  // Group modifiers
+  &__group:first-child {
+    padding-top: 0.5rem;
+  }
+
   &__group--stacked {
     flex-direction: column;
     align-items: stretch;
     gap: 0.25rem;
+  }
 
-    .base-form__label {
-      margin-bottom: 0.25rem;
-    }
+  &__group--stacked .base-form__label {
+    margin-bottom: 0.25rem;
   }
 
   &__group--checkbox {
     height: 28px;
     justify-content: space-between;
     align-items: center;
-
-    .base-form__label {
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      margin: 0;
-      line-height: 28px;
-      min-width: auto;
-      flex: 1;
-    }
-
-    .base-form__checkbox {
-      margin-left: 0.5rem;
-      flex: 0 0 auto;
-    }
   }
 
-  &__group--header {
-    .base-form__label {
-      font-weight: bold;
-    }
+  &__group--checkbox .base-form__label {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin: 0;
+    line-height: 28px;
+    min-width: auto;
+    flex: 1;
+  }
+
+  &__group--checkbox .base-form__checkbox {
+    margin-left: 0.5rem;
+    flex: 0 0 auto;
+  }
+
+  &__group--header .base-form__label {
+    font-weight: bold;
   }
 
   &__group--right {
