--- a/templates/actor/gear.hbs
+++ b/templates/actor/gear.hbs
@@ -1,14 +1,14 @@
 {{! Gear Tab }}
 <section class='tab gear {{tab.cssClass}}' data-group='primary' data-tab='gear'>
-  <div class="items-section-header">
+  <div class="items-panel__section-header">
     {{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.ActiveGear"}}
   </div>
-  <ol class='items-list'>
-    <li class='item flexrow items-header'>
-      <div class='item-name'>{{localize 'Name'}}</div>
-      <div class="item-cost item-prop">{{localize 'EVENTIDE_RP_SYSTEM.Item.Inventory.Cost.label'}}</div>
-      <div class='item-quantity'>{{localize 'EVENTIDE_RP_SYSTEM.Item.Inventory.Quantity.label'}}</div>
-      <div class='item-controls'>
+  <ol class='items-panel__list'>
+    <li class='items-panel__list-item items-panel__header'>
+      <div class='items-panel__name items-panel__header-cell'>{{localize 'Name'}}</div>
+      <div class="items-panel__prop items-panel__header-cell">{{localize 'EVENTIDE_RP_SYSTEM.Item.Inventory.Cost.label'}}</div>
+      <div class='items-panel__prop items-panel__header-cell'>{{localize 'EVENTIDE_RP_SYSTEM.Item.Inventory.Quantity.label'}}</div>
+      <div class='items-panel__controls items-panel__header-cell'>
         {{#if @root.editable}}
           <a
             class='item-control item-create'
@@ -25,13 +25,13 @@
     </li>
     {{#each equippedGear as |item id|}}
       <li
-        class='item flexrow'
+        class='items-panel__list-item'
         data-item-id='{{item._id}}'
         data-drag='true'
         data-document-class='Item'
       >
-        <div class='item-name'>
-          <div class='item-image'>
+        <div class='items-panel__name items-panel__list-cell'>
+          <div class='items-panel__image'>
             <a class='rollable' data-roll-type='item' data-action='roll'>
               <img
                 src='{{item.img}}'
@@ -43,9 +43,9 @@
           </div>
           <div>{{item.name}}</div>
         </div>
-        <div class="item-cost item-prop">{{item.system.cost}}</div>
-        <div class='item-quantity item-prop'>{{item.system.quantity}}</div>
-        <div class='item-controls'>
+        <div class="items-panel__prop items-panel__list-cell">{{item.system.cost}}</div>
+        <div class='items-panel__prop items-panel__list-cell'>{{item.system.quantity}}</div>
+        <div class='items-panel__controls items-panel__list-cell'>
         {{#if (or @root.isGM (not item.system.cursed))}}
             <a
               class="item-control item-equip"
@@ -86,31 +86,31 @@
             </a>
           {{else}}
             <a 
-              class="item-control item-decrement-disabled" 
+              class="item-control items-panel__controls--cursed" 
               title='{{localize "EVENTIDE_RP_SYSTEM.Item.Inventory.Unequip.label"}}' 
               disabled>
                 <i class="fa-solid fa-lock-keyhole"></i>
             </a>
             <a
-              class="item-control item-decrement-disabled" 
+              class="item-control items-panel__controls--cursed" 
               title='{{localize "DOCUMENT.Update" type='Gear'}}' 
               disabled>
                 <i class="fa-solid fa-lock-keyhole"></i>
             </a>
             <a
-              class="item-control item-decrement-disabled" 
+              class="item-control items-panel__controls--cursed" 
               title='{{localize "DOCUMENT.Delete" type='Gear'}}' 
               disabled>
                 <i class="fa-solid fa-lock-keyhole"></i>
             </a>
             <a
-              class="item-control item-decrement-disabled"
+              class="item-control items-panel__controls--cursed"
               title='{{localize "EVENTIDE_RP_SYSTEM.Item.Inventory.Increment.label"}}' 
               disabled>
                 <i class="fa-solid fa-lock-keyhole"></i>
             </a>
             <a
-              class="item-control item-decrement-disabled"
+              class="item-control items-panel__controls--cursed"
               title='{{localize "EVENTIDE_RP_SYSTEM.Item.Inventory.Decrement.label"}}' 
               disabled>
                 <i class="fa-solid fa-lock-keyhole"></i>
@@ -121,26 +121,26 @@
     {{/each}}
     
   </ol>
-  <div class="items-section-header">
+  <div class="items-panel__section-header">
     {{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.UnequippedGear"}}
   </div>
-  <ol class='items-list'>
-    <li class='item flexrow items-header'>
-      <div class='item-name'>{{localize 'Name'}}</div>
-      <div class="item-cost item-prop">{{localize 'EVENTIDE_RP_SYSTEM.Item.Inventory.Cost.label'}}</div>
-      <div class='item-quantity'>{{localize 'EVENTIDE_RP_SYSTEM.Item.Inventory.Quantity.label'}}</div>
-      <div class='item-controls'>
+  <ol class='items-panel__list'>
+    <li class='items-panel__list-item items-panel__header items-panel__header-cell'>
+      <div class='items-panel__name items-panel__header-cell'>{{localize 'Name'}}</div>
+      <div class="items-panel__prop items-panel__header-cell">{{localize 'EVENTIDE_RP_SYSTEM.Item.Inventory.Cost.label'}}</div>
+      <div class='items-panel__prop items-panel__header-cell'>{{localize 'EVENTIDE_RP_SYSTEM.Item.Inventory.Quantity.label'}}</div>
+      <div class='items-panel__controls items-panel__header-cell'>
       </div>
     </li>
   {{#each unequippedGear as |item id|}}
       <li
-        class='item flexrow'
+        class='items-panel__list-item'
         data-item-id='{{item._id}}'
         data-drag='true'
         data-document-class='Item'
       >
-        <div class='item-name'>
-          <div class='item-image'>
+        <div class='items-panel__name items-panel__list-cell'>
+          <div class='items-panel__image'>
             <a class='rollable' data-roll-type='item' data-action='roll'>
               <img
                 src='{{item.img}}'
@@ -152,24 +152,24 @@
           </div>
           <div>{{item.name}}</div>
         </div>
-        <div class="item-cost item-prop">{{item.system.cost}}</div>
-        <div class='item-quantity item-prop'>{{item.system.quantity}}</div>
-        <div class='item-controls'>
+        <div class="items-panel__prop items-panel__list-cell">{{item.system.cost}}</div>
+        <div class='items-panel__prop items-panel__list-cell'>{{item.system.quantity}}</div>
+        <div class='items-panel__controls items-panel__list-cell'>
           <a
-            class="item-control item-unequip {{#if (not item.system.quantity)}}item-unequip-disabled{{/if}}"
+            class="items-panel__control items-panel__controls--unequipped {{#if (not item.system.quantity)}}items-panel__controls--disabled{{/if}}"
             {{#if (not item.system.quantity)}}disabled{{/if}}
             title='{{localize "EVENTIDE_RP_SYSTEM.Item.Inventory.Equip.label"}}'
             data-action='toggleGear'
           >
-            {{#ifCond item.system.quantity "<=" 0}}
+            {{#if (not item.system.quantity)}}
               <i class="fa-solid fa-triangle-exclamation"></i>
             {{else}}
             <i class='fa-solid fa-helmet-battle'></i>
-            {{/ifCond}}
+            {{/if}}
           </a>
           {{#if @root.isGM}}
             <a
-              class='item-control item-edit'
+              class='items-panel__control item-edit'
               title='{{localize "DOCUMENT.Update" type='Gear'}}'
               data-action='viewDoc'
             >
@@ -178,7 +178,7 @@
           {{/if}}
           {{#if @root.editable}}
             <a
-              class='item-control item-delete'
+              class='items-panel__control item-delete'
               title='{{localize "DOCUMENT.Delete" type='Gear'}}'
               data-action='deleteDoc'
             >
@@ -187,7 +187,7 @@
           {{/if}}
           
           <a
-            class="item-control item-increment"
+            class="items-panel__control item-increment"
             title='{{localize "EVENTIDE_RP_SYSTEM.Item.Inventory.Increment.label"}}'
             data-action='incrementGear'
           >
@@ -195,7 +195,7 @@
           </a>
             {{#if item.system.quantity}}
             <a
-              class="item-control item-decrement"
+              class="items-panel__control item-decrement"
               title='{{localize "EVENTIDE_RP_SYSTEM.Item.Inventory.Decrement.label"}}'
               data-action='decrementGear'
             >
@@ -203,7 +203,7 @@
             </a>
             {{else}}
               <a 
-                class="item-control item-decrement-disabled" 
+                class="items-panel__control items-panel__controls--disabled" 
                 title='{{localize "EVENTIDE_RP_SYSTEM.Item.Inventory.Decrement.label"}}' 
                 disabled>
                   <i class="fa-solid fa-ban"></i>
