--- a/templates/macros/popups/status-popup.hbs
+++ b/templates/macros/popups/status-popup.hbs
@@ -16,39 +16,33 @@
 
         <hr />
 
-        {{#ifCond effects.length ">" 0}}
-        <div class="popup-form__effects">
-            <div class='popup-form__effects--title'>{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Effects"}}</div>
-            {{#each effects}}
-                <div class="base-form__effects--name">
-                    <img src="{{this.img}}" class="chat-card__image--secondary" /> {{this.name}}
-                </div>
-                {{#ifCond this.changes.length ">" 0 }}
-                {{#each this.changes}}
-                    <div class="base-form__effects--row">
-                        <div class="base-form__effects--row--cell base-form__effects--row--cell--first">{{keySplit this.key 2}}</div> 
-                        <div class="base-form__effects--row--cell base-form__effects--row--cell--middle">
-                            {{#ifCond this.mode "===" 5}}{{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.SetTo"}}{{/ifCond}}
-                            {{#ifCond this.mode "!==" 5}}
-                            {{#ifCond (keySplit this.key 4) "===" "advantage"}}
-                                {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Adv"}}
-                            {{/ifCond}}
-                            {{#ifCond (keySplit this.key 4) "===" "disadvantage"}}
-                                {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Dis"}}
-                            {{/ifCond}}
-                            {{#ifCond (keySplit this.key 3) "===" "change"}}
-                                {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Add"}}
-                            {{/ifCond}}
-                            {{/ifCond}}
-                        </div>
-                        <div class="base-form__effects--row--cell base-form__effects--row--cell--last">{{this.value}}</div>
-                    </div>
-                {{/each}}
-                {{/ifCond}}
-            {{/each}}
+{{#if mainEffect.changes.length}}
+<div class="base-form__effects">
+  <div class="base-form__effects-title">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Effects"}}</div>
+    <div class="base-form__effects-name"><img src="{{mainEffect.img}}" class="chat-card__image--secondary" /> {{mainEffect.name}}</div>
+      {{#each mainEffect.changes}}
+        <div class="base-form__effects-row">
+          <div class="base-form__effects-row-cell base-form__effects-row-cell--first">{{keySplit this.key 2}}</div> 
+          <div class="base-form__effects-row-cell base-form__effects-row-cell--middle">
+            {{#if (eq this.mode 5)}}
+              {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.SetTo"}}
+            {{else}}
+              {{#if (eq (keySplit this.key 4) "advantage")}}
+                {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Adv"}}
+              {{/if}}
+              {{#if (eq (keySplit this.key 4) "disadvantage")}}
+                {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Dis"}}
+              {{/if}}
+              {{#if (eq (keySplit this.key 3) "change")}}
+                {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Add"}}
+              {{/if}}
+            {{/if}}
+          </div>
+          <div class="base-form__effects-row-cell base-form__effects-row-cell--last">{{this.value}}</div>
         </div>
-        {{/ifCond}}
-    </div>
+      {{/each}}
+</div>
+{{/if}}
 
     <footer class="base-form__footer">
         <button type="button" class="popup-form__button" data-action="toChat">{{localize "EVENTIDE_RP_SYSTEM.Forms.Buttons.SendToChat"}}</button>
