--- a/css/eventide-rp-system.css
+++ b/css/eventide-rp-system.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Combo&family=Merienda:wght@300..900&family=Protest+Revolution&family=Underdog&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Combo&family=Amatic+SC:wght@400;700&family=Merienda:wght@300..900&family=Protest+Revolution&family=Underdog&family=Carlito:ital,wght@0,400;0,700;1,400;1,700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Goblin+One&display=swap");
 .protest-revolution-regular, .popup-form__header, .chat-card__header, .base-form__effects-title, .popup-form__effects--title, .chat-card__effects--title {
   font-family: "Protest Revolution", serif;
   font-weight: 400;
@@ -23,6 +23,36 @@
   font-family: "Merienda", serif;
   font-optical-sizing: auto;
   font-weight: 400;
+  font-style: normal;
+}
+
+.carlito-regular {
+  font-family: "Carlito", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.space-mono-regular {
+  font-family: "Space Mono", monospace;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.goblin-one-regular {
+  font-family: "Goblin One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.amatic-sc-regular {
+  font-family: "Amatic SC", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.amatic-sc-bold {
+  font-family: "Amatic SC", serif;
+  font-weight: 700;
   font-style: normal;
 }
 
@@ -735,6 +765,17 @@
   min-width: 120px;
   cursor: pointer;
 }
+.base-form__label--small {
+  font-family: inherit;
+  font-size: 1.125rem;
+  font-weight: 700;
+  color: var(--erps-label-text);
+  margin-bottom: 0.375rem;
+  display: block;
+  flex: 0, 0, 120px;
+  min-width: 120px;
+  font-size: 0.75rem;
+}
 .base-form__label--inline {
   display: inline-block;
   margin-right: 0.5rem;
@@ -868,7 +909,7 @@
   }
 }
 @supports (container-type: inline-size) {
-  @container (max-width: 9rem) {
+  @container (max-width: 7rem) {
     .base-form__number-input-wrapper .decrement, .base-form__number-input-wrapper .increment {
       display: none !important;
     }
@@ -1372,6 +1413,8 @@
 .base-form__sheet-profile-img {
   flex: 0 0 100px;
   height: 100px;
+  aspect-ratio: 1/1;
+  object-fit: cover;
   margin-right: 10px;
 }
 .base-form__sheet-header-fields {
@@ -2784,14 +2827,14 @@
 */
 .eventide-rp-system {
   @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
-  @import url("https://fonts.googleapis.com/css2?family=Combo&family=Merienda:wght@300..900&family=Protest+Revolution&family=Underdog&display=swap");
+  @import url("https://fonts.googleapis.com/css2?family=Combo&family=Amatic+SC:wght@400;700&family=Merienda:wght@300..900&family=Protest+Revolution&family=Underdog&family=Carlito:ital,wght@0,400;0,700;1,400;1,700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Goblin+One&display=swap");
   /* Update base form styling to ensure scrollbars work properly */
   @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
-  @import url("https://fonts.googleapis.com/css2?family=Combo&family=Merienda:wght@300..900&family=Protest+Revolution&family=Underdog&display=swap");
+  @import url("https://fonts.googleapis.com/css2?family=Combo&family=Amatic+SC:wght@400;700&family=Merienda:wght@300..900&family=Protest+Revolution&family=Underdog&family=Carlito:ital,wght@0,400;0,700;1,400;1,700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Goblin+One&display=swap");
   @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
-  @import url("https://fonts.googleapis.com/css2?family=Combo&family=Merienda:wght@300..900&family=Protest+Revolution&family=Underdog&display=swap");
+  @import url("https://fonts.googleapis.com/css2?family=Combo&family=Amatic+SC:wght@400;700&family=Merienda:wght@300..900&family=Protest+Revolution&family=Underdog&family=Carlito:ital,wght@0,400;0,700;1,400;1,700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Goblin+One&display=swap");
   @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
-  @import url("https://fonts.googleapis.com/css2?family=Combo&family=Merienda:wght@300..900&family=Protest+Revolution&family=Underdog&display=swap");
+  @import url("https://fonts.googleapis.com/css2?family=Combo&family=Amatic+SC:wght@400;700&family=Merienda:wght@300..900&family=Protest+Revolution&family=Underdog&family=Carlito:ital,wght@0,400;0,700;1,400;1,700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Goblin+One&display=swap");
 }
 .eventide-rp-system .protest-revolution-regular {
   font-family: "Protest Revolution", serif;
@@ -2812,6 +2855,31 @@
   font-family: "Merienda", serif;
   font-optical-sizing: auto;
   font-weight: 400;
+  font-style: normal;
+}
+.eventide-rp-system .carlito-regular {
+  font-family: "Carlito", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.eventide-rp-system .space-mono-regular {
+  font-family: "Space Mono", monospace;
+  font-weight: 400;
+  font-style: normal;
+}
+.eventide-rp-system .goblin-one-regular {
+  font-family: "Goblin One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.eventide-rp-system .amatic-sc-regular {
+  font-family: "Amatic SC", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.eventide-rp-system .amatic-sc-bold {
+  font-family: "Amatic SC", serif;
+  font-weight: 700;
   font-style: normal;
 }
 .eventide-rp-system * {
@@ -3174,6 +3242,31 @@
   font-weight: 400;
   font-style: normal;
 }
+.eventide-rp-system .carlito-regular {
+  font-family: "Carlito", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.eventide-rp-system .space-mono-regular {
+  font-family: "Space Mono", monospace;
+  font-weight: 400;
+  font-style: normal;
+}
+.eventide-rp-system .goblin-one-regular {
+  font-family: "Goblin One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.eventide-rp-system .amatic-sc-regular {
+  font-family: "Amatic SC", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.eventide-rp-system .amatic-sc-bold {
+  font-family: "Amatic SC", serif;
+  font-weight: 700;
+  font-style: normal;
+}
 .eventide-rp-system .resource-label {
   font-weight: bold;
 }
@@ -3347,6 +3440,31 @@
   font-weight: 400;
   font-style: normal;
 }
+.eventide-rp-system .carlito-regular {
+  font-family: "Carlito", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.eventide-rp-system .space-mono-regular {
+  font-family: "Space Mono", monospace;
+  font-weight: 400;
+  font-style: normal;
+}
+.eventide-rp-system .goblin-one-regular {
+  font-family: "Goblin One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.eventide-rp-system .amatic-sc-regular {
+  font-family: "Amatic SC", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.eventide-rp-system .amatic-sc-bold, .eventide-rp-system .items-panel__header-cell {
+  font-family: "Amatic SC", serif;
+  font-weight: 700;
+  font-style: normal;
+}
 .eventide-rp-system .items-panel__section-header {
   display: flex;
   justify-content: center;
@@ -3369,12 +3487,6 @@
 .eventide-rp-system .items-header > * {
   text-align: center;
 }
-.eventide-rp-system .items-header .items-panel__name {
-  font-weight: bold;
-  padding-left: 5px;
-  text-align: left;
-  display: flex;
-}
 .eventide-rp-system .items-panel__list {
   display: grid;
   grid-template-columns: 1fr max-content max-content max-content;
@@ -3383,7 +3495,6 @@
   list-style: none;
   margin: 0;
   padding: 0;
-  overflow-y: auto;
   color: var(--erps-c-tan);
 }
 .eventide-rp-system .items-panel__list .items-panel__list-item, .eventide-rp-system .items-panel__list .items-panel__header {
@@ -3394,7 +3505,11 @@
 .eventide-rp-system .items-panel__list .items-panel__usage,
 .eventide-rp-system .items-panel__list .items-panel__controls {
   min-width: 0;
-  overflow: hidden;
+}
+.eventide-rp-system .items-panel__list .items-panel__name > div:not(.items-panel__image),
+.eventide-rp-system .items-panel__list .items-panel__usage > div {
+  min-width: 0;
+  overflow-x: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
   display: block;
@@ -3402,20 +3517,19 @@
 .eventide-rp-system .items-panel__list--spanning {
   grid-template-columns: 1fr max-content;
 }
-.eventide-rp-system .items-panel__header {
-  border-radius: 6px 6px 0 0;
-}
 .eventide-rp-system .items-panel__header-cell {
   background: var(--erps-form-content-bg);
   width: 100%;
   color: var(--erps-label-text);
   font-weight: bold;
-  border-bottom: 2px solid var(--erps-c-beige);
+  border-bottom: 2px solid #10458e;
+  padding-bottom: 2px;
+  margin-bottom: 2px;
   text-shadow: 0 1px 3px var(--erps-white-text-glow);
   font-size: 1rem;
 }
-.eventide-rp-system .items-panel__header .items-panel__name,
-.eventide-rp-system .items-panel__list-item .items-panel__name {
+.eventide-rp-system .items-panel__header,
+.eventide-rp-system .items-panel__list-item {
   flex: 2 1 0%;
   min-width: 90px;
   text-align: left;
@@ -3436,9 +3550,8 @@
 .eventide-rp-system .items-panel__list-item .items-panel__usage {
   flex: 2 1 0%;
   min-width: 120px;
-  max-width: 320px;
+  max-width: 200px;
   text-align: left;
-  white-space: normal;
   align-items: center;
   display: flex;
 }
@@ -3455,7 +3568,6 @@
   list-style: none;
   margin: 0;
   padding: 0;
-  overflow-y: auto;
   color: var(--erps-c-tan);
 }
 .eventide-rp-system .items-panel__list .items-panel__list {
@@ -3465,17 +3577,9 @@
 }
 .eventide-rp-system .items-panel__list .items-panel__name {
   flex: 2;
-  margin: 0;
-  overflow: hidden;
   text-align: left;
   align-items: center;
   display: flex;
-}
-.eventide-rp-system .items-panel__list .items-panel__name h3,
-.eventide-rp-system .items-panel__list .items-panel__name h4 {
-  margin: 0;
-  white-space: nowrap;
-  overflow-x: hidden;
 }
 .eventide-rp-system .items-panel__list .items-panel__controls {
   display: flex;
@@ -3497,14 +3601,9 @@
 }
 .eventide-rp-system .items-panel__list .items-panel__list-item {
   align-items: center;
-  padding: 0 2px;
-  border-bottom: 1px solid var(--erps-c-faint);
 }
 .eventide-rp-system .items-panel__list .items-panel__list-item:last-child {
   border-bottom: none;
-}
-.eventide-rp-system .items-panel__list .items-panel__list-item .items-panel__name {
-  color: var(--erps-c-dark);
 }
 .eventide-rp-system .items-panel__list .items-panel__list-item .items-panel__name .items-panel__image {
   flex: 0 0 30px;
@@ -3520,12 +3619,7 @@
 }
 .eventide-rp-system .items-panel__list .items-panel__list-item .items-panel__list-cell {
   font-size: 0.75rem;
-}
-.eventide-rp-system .items-panel__list .items-panel__list-item .items-panel__usage {
-  flex: 1;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  border-bottom: 2px dotted var(--erps-c-faint);
 }
 .eventide-rp-system .items-panel__list .items-panel__prop {
   text-align: center;
@@ -3548,10 +3642,6 @@
   padding-left: 5px;
   text-align: left;
 }
-.eventide-rp-system .items-panel__formula {
-  flex: 0 0 200px;
-  padding: 0 8px;
-}
 .eventide-rp-system .protest-revolution-regular {
   font-family: "Protest Revolution", serif;
   font-weight: 400;
@@ -3571,6 +3661,31 @@
   font-family: "Merienda", serif;
   font-optical-sizing: auto;
   font-weight: 400;
+  font-style: normal;
+}
+.eventide-rp-system .carlito-regular {
+  font-family: "Carlito", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.eventide-rp-system .space-mono-regular {
+  font-family: "Space Mono", monospace;
+  font-weight: 400;
+  font-style: normal;
+}
+.eventide-rp-system .goblin-one-regular {
+  font-family: "Goblin One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.eventide-rp-system .amatic-sc-regular {
+  font-family: "Amatic SC", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.eventide-rp-system .amatic-sc-bold {
+  font-family: "Amatic SC", serif;
+  font-weight: 700;
   font-style: normal;
 }
 .eventide-rp-system * {
@@ -3933,7 +4048,7 @@
 .eventide-rp-system .eventide-item-sheet__scrollable-container {
   flex: 1;
   overflow-y: auto;
-  max-height: 14rem;
+  max-height: 20rem;
   margin-top: 0.5rem;
   padding-right: 0.5rem;
 }
@@ -4092,7 +4207,7 @@
 }
 .eventide-rp-system .eventide-item-sheet--scrollbars .tab.effects, .eventide-rp-system .eventide-item-sheet--scrollbars .tab.characterEffects {
   height: auto;
-  max-height: 600px;
+  max-height: 75%;
   overflow-y: auto !important;
 }
 
