--- a/src/scss/global/_form-elements.scss
+++ b/src/scss/global/_form-elements.scss
@@ -234,6 +234,10 @@
     }
   }
 
+  &__label--small {
+    @include mixins.form-label-small;
+  }
+
   &__label--inline {
     display: inline-block;
     margin-right: 0.5rem;
@@ -368,11 +372,11 @@
     margin-left: auto;
     align-self: flex-end;
     flex: 0 0 100px;
+  }
 
-    &--edit {
-      border: 1px solid colors.$input-image-edit-border;
-      border-radius: 10px;
-    }
+  &__image--edit {
+    border: 1px solid colors.$input-image-edit-border;
+    border-radius: 10px;
   }
 
   &__hidden-input {
@@ -392,6 +396,8 @@
   &__sheet-profile-img {
     flex: 0 0 100px;
     height: 100px;
+    aspect-ratio: 1/1;
+    object-fit: cover;
     margin-right: 10px;
   }
 
